# pcoder-resume-customizer

./: .gitignore  README.md  pyproject.toml
Applications/: job_details.yml  profile.yaml
Applications/2025-01-24--Portal_Inc.--Experienced_Python_Programmer/: cover_letter.tex  job_details.yml  profile.yml
src/pcoder_resume_customizer/: __init__.py  main.py  moderncv.py
src/pcoder_resume_customizer/tools/cli/: __init__.py
src/pcoder_resume_customizer/utils/config/: __init__.py
src/pcoder_resume_customizer/utils/logging/: __init__.py
